generalize error handling, fix some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {
    background-size: cover;
 }
 
+.container {
+  max-width: 340px;
+  margin: 0 auto;
+}
+
 h1 {
   text-align: center;
 }
